--- a/aula02 - box-model/style.css
+++ b/aula02 - box-model/style.css
@@ -1,8 +1,27 @@
 .box {
-    width: 200px;
+    width: 50px;
     padding: 20px;
     border: 5px solid black;
-    margin: 50px;
+    margin: 100px;
+    padding-top:80px ;
+    padding-right: 50px;
     background-color: gray;
     color: white;
+}
+
+a{
+    padding-left: 15px;
+    background-color: aquamarine;
+    font-size: 100px;
+    border: 1px solid black;
+    margin-left: 50px;
+}
+
+.google{
+    padding: 30px;
+    background-color: red;
+    color: white;
+    font-size: 50px;
+    border: 1px solid black;
+    margin-left: 50px;
 }
