--- a/Projeto/style.css
+++ b/Projeto/style.css
@@ -1,5 +1,4 @@
-body{
-    font-family: Arial, Helvetica, sans-serif;
+body {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -8,25 +7,42 @@ body{
     margin: 0;
 }
 
-.card{
+.card {
     background-color: white;
-    width: 300px;
+    width: 200px;
     padding: 20px;
     border-radius: 10px;
     text-align: center;
-    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
 }
 
-.card img{
+.card img {
     width: 100%;
     border-radius: 10px;
 }
 
-.card h2{
+.card h2 {
     margin: 10px 0;
 }
 
-.card p{
+.card p {
     font-size: 14px;
     color: #333;
+}
+
+button {
+    background-color: #cce7ff;
+    color: #333;
+    padding: 8px 20px;
+    width: 100px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: background-color 1s linear;
+    transition: width 1s linear;
+}
+
+button:hover {
+    background-color: #10416bed;
+    color: #fff;
+    width: 150px;
 }
