--- a/AV2 - 1 Periodo/Claudio_LuisAntonio/style.css
+++ b/AV2 - 1 Periodo/Claudio_LuisAntonio/style.css
@@ -3,7 +3,7 @@ body {
     background-color: #F5F5F5;
     justify-content: center;
     align-items: center;
-    height: 100hv;
+    height: 100vh;
     margin: 0;
 }
 
