--- a/AV2 - 1 Periodo/style.css
+++ b/AV2 - 1 Periodo/style.css
@@ -1,6 +1,6 @@
 :root {
-    --primary-color: #3498db;
-    --secondary-color: #2980b9;
+    --primary-color: #1d384a;
+    --secondary-color: #27628a;
     --background-color: #f5f7fa;
     --text-color: #333;
     --light-gray: #ecf0f1;
