--- a/AV2 - 1 Periodo/LuisFelipe_Fabio/style.css
+++ b/AV2 - 1 Periodo/LuisFelipe_Fabio/style.css
@@ -78,7 +78,7 @@ body {
 .circle-button {
     width: 30px;
     height: 30px;
-    border: 2px solid #white;
+    border: 2px solid white;
     border-radius: 50%;
     background: darkblue;
     color: white;
