--- a/aula08_animacao/style.css
+++ b/aula08_animacao/style.css
@@ -23,16 +23,19 @@ body{
         height: 200px;
         background-color: blue;
         transform: rotate(10deg);
+        border-radius: 10px;
     }
     70%{
         height: 400px;
         transform: rotate(20deg);
         background-color: orange;
+        border-radius: 20px;
     }
     100%{
         height: 100px;
         transform: rotate(0deg);
         background-color: purple;
+        border-radius: 0px;
     }
 }
 
@@ -42,7 +45,7 @@ body{
     background-color: red;
     border-radius: 50%;
     position: absolute;
-    top: 0;
+    top: 100;
     left: 0;
     animation: animacaoBola 10s linear 0s infinite;
 }
